# lets-schedule

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/core/: asgi.py  config.py
src/core/api/: v1.py
src/core/dependencies/: http.py
src/core/tests/: conftest.py  test_fastapi.py
src/core/types/: repositories.py
src/db/: session.py
src/modules/auth/: routers.py
src/modules/auth/google/: const.py  dependencies.py  dto.py  routers.py  utils.py
src/modules/auth/google/tests/: test_authorization_url_router.py  test_google_authorization_url_router.py  test_url_constructor.py
